Adding sonar.properties file